--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,17 +1,21 @@
-name: ssh command
+name: ssh deploy
 on:
   push:
     branches:
       - develop
 jobs:
-  test:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - id: ssh
+      - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Deploy to Staging
+        uses: appleboy/ssh-action@v0.1.8
         with:
-          SSH_HOST: ${{ secrets.DEV_SSH_HOST }}
-          SSH_PORT: ${{ secrets.DEV_SSH_PORT }}
-          SSH_USER: ${{ secrets.DEV_SSH_USER }}
-          SSH_KEY: ${{ secrets.DEV_SSHE_SSH_KEY }}
-      - run: ssh ${{ steps.ssh.outputs.SERVER }} bash /app/ayaka_usui/deploy.sh ayaka_usui
+          host: ${{ secrets.DEV_SSH_HOST }}
+          port: ${{ secrets.DEV_SSH_PORT }}
+          username: ${{ secrets.DEV_SSH_USER }}
+          key: ${{ secrets.DEV_SSHE_SSH_KEY }}
+          script: |
+            bash /app/ayaka_usui/deploy.sh ayaka_usui
