--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,12 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: ssh
-        uses: appleboy/ssh-action@v0.1.8
+        uses: invi5H/ssh-action@v1
         with:
-          host: ${{ secrets.DEV_SSH_HOST }}
-          port: ${{ secrets.DEV_SSH_PORT }}
-          username: ${{ secrets.DEV_SSH_USER }}
-          key: ${{ secrets.DEV_SSHE_SSH_KEY }}
-          script: |
-            set -e
-            bash /app/ayaka_usui/deploy.sh ayaka_usui
+          SSH_HOST: ${{ secrets.DEV_SSH_HOST }}
+          SSH_PORT: ${{ secrets.DEV_SSH_PORT }}
+          SSH_USER: ${{ secrets.DEV_SSH_USER }}
+          SSH_KEY: ${{ secrets.DEV_SSHE_SSH_KEY }}
+      - run: ssh ${{ steps.ssh.outputs.SERVER }} bash /app/ayaka_usui/deploy.sh ayaka_usui
