--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,20 +1,20 @@
-name: ssh command
+name: ssh deploy
 on:
   push:
     branches:
       - develop
+
 jobs:
-  test:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - id: ssh
-        uses: invi5H/ssh-action@v1
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v0.1.8
         with:
-          SSH_HOST: ${{ secrets.DEV_SSH_HOST }}
-          SSH_PORT: ${{ secrets.DEV_SSH_PORT }}
-          SSH_USER: ${{ secrets.DEV_SSH_USER }}
-          SSH_KEY: ${{ secrets.DEV_SSHE_SSH_KEY }}
-      - name: run deploy
-        run: |
-          ssh ${{ steps.ssh.outputs.SERVER }} \
-            "bash /app/ayaka_usui/deploy.sh ayaka_usui"
+          host: ${{ secrets.DEV_SSH_HOST }}
+          port: ${{ secrets.DEV_SSH_PORT }}
+          username: ${{ secrets.DEV_SSH_USER }}
+          key: ${{ secrets.DEV_SSHE_SSH_KEY }}
+          script: |
+            echo "===== deploy.sh START ====="
+            bash /app/ayaka_usui/deploy.sh ayaka_usui
