--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,8 @@ jobs:
           username: ${{ secrets.PROD_SSH_USER }}
           key: ${{ secrets.PROD_SSHE_SSH_KEY }}
           script: |
-            echo "===== PRODUCTION deploy START ====="
+            # GitHub Actions の Docker 内で git pull が止まらないように
+            git config --global --add safe.directory /app/ayaka_usui
+            
+            # 本来の deploy.sh を呼び出す
             bash /app/ayaka_usui/deploy.sh ayaka_usui
